# fast-rmsd

./: .gitignore  compare.py
filter_set/: 7UPJ_0_1.xyz  7UPJ_0_10.xyz  7UPJ_0_100.xyz  7UPJ_0_101.xyz  7UPJ_0_102.xyz  7UPJ_0_103.xyz  7UPJ_0_104.xyz  7UPJ_0_105.xyz  7UPJ_0_106.xyz  7UPJ_0_107.xyz  7UPJ_0_108.xyz  7UPJ_0_11.xyz  7UPJ_0_110.xyz  7UPJ_0_111.xyz  7UPJ_0_112.xyz  7UPJ_0_113.xyz  7UPJ_0_114.xyz  7UPJ_0_115.xyz  7UPJ_0_116.xyz  7UPJ_0_117.xyz  7UPJ_0_118.xyz  7UPJ_0_119.xyz  7UPJ_0_12.xyz  7UPJ_0_120.xyz  7UPJ_0_121.xyz  7UPJ_0_122.xyz  7UPJ_0_123.xyz  7UPJ_0_124.xyz  7UPJ_0_125.xyz  7UPJ_0_126.xyz  7UPJ_0_127.xyz  7UPJ_0_129.xyz  7UPJ_0_13.xyz  7UPJ_0_130.xyz  7UPJ_0_131.xyz  7UPJ_0_132.xyz  7UPJ_0_133.xyz  7UPJ_0_134.xyz  7UPJ_0_135.xyz  7UPJ_0_136.xyz  (+32614 more)
implementation/: CMakeLists.txt  conformation.cpp  conformation.h  main.cpp
python_template/: molB.xyz  molC1.xyz  molD.xyz  molD1.xyz  rmsd_summarize.py
python_template/rmsd/: __init__.py  calculate_rmsd.py  logging.py
testset/: 001.xyz  003.xyz  005.xyz  006.xyz  007.xyz  008.xyz  009.xyz  011.xyz  013.xyz  014.xyz  016.xyz  017.xyz  018.xyz  019.xyz  020.xyz  022.xyz  026.xyz  029.xyz  031.xyz  033.xyz  035.xyz  036.xyz  037.xyz  042.xyz  045.xyz  046.xyz  047.xyz  048.xyz  050.xyz  058.xyz  060.xyz  064.xyz  065.xyz  066.xyz  067.xyz  068.xyz  070.xyz  071.xyz  072.xyz  073.xyz  (+455 more)
